--- a/pwgen.css
+++ b/pwgen.css
@@ -1,33 +1,36 @@
-h2 {
-    line-height: 0.1;
-}
-
-div.passwordContainer, div.instructions {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#password {
-    width: 50%;
-    align-self: center;
-
-}
-
-div.button, div.options {
-    display: flex;
-    justify-content: center;
-}
-
+/* Changed background color to black (below the jumbotron only) */
 body {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+    background-color: black;
 }
 
-button {
-    background-color: black;
-    color: red;
+/* Changed the size of the font for the heads in the options section. */
+h2 {
+    font-size: 2em;
+}
 
+/* Centers the text that will be the password when generated. */
+textarea {
+    text-align: center;
+}
+
+/* Changes the bacground color of the top section (the Jumbotron) with the box for the password. */
+div.passwordContainer {
+    background-color: rgb(204, 192, 192);
+}
+
+/* Changes the color of the text in the lower portion (witht he black background) to white. */
+div.optionsContainer {
+    color: white;
+}
+
+/* Adds outline to the Generate Password button */
+button.btn {
+    outline: black auto 2px;
+
+}
+
+/* Adds padding to the Font Awesome icons on the button to give space between them and the button text */
+i.fas {
+    padding-left: 1em;
+    padding-right: 1em;
 }
